# coloran-dynamic-slice-optimizer

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIXES_SUMMARY.md  README.md  coloran_processed_features.parquet  complete_training_report_20250724_102317.json  complete_training_test.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_complete_training.py  setup.py  setup_environment.py  simple_validation.py  training_demo.py  validate_fixes.py  validate_pipeline.py  validate_with_fallback.py  網路切片資源動態分配最佳化v1.ipynb
.github/: ISSUE_TEMPLATE.md
.github/workflows/: comprehensive_ci.yml
deploy/kubernetes/: deployment.yaml  grafana-dashboard.yaml  prometheus-config.yaml  rollback.sh  service.yaml
deploy/terraform/: main.tf
docs/: api_reference.md  architecture.md  deployment.md  development.md  experiments.md  installation.md  usage.md  user-guide.md
docs/api/: index.md
examples/: custom_dataset.py  quick_start.py
experiments/: run_experiment.py
experiments/notebooks/: full_experiment.ipynb
src/data/: data_loader.py  data_processor.py
src/models/: ml_trainer.py  predictors.py
src/optimization/: allocator.py  exhaustive_search.py  genetic_algorithm.py
src/visualization/: plotting.py
tests/: conftest.py  test_config_manager.py  test_data_pipeline.py  test_data_processing.py  test_ml_trainer.py  test_models.py
tests/gpu/: test_cuda_kernels.py  test_gpu_performance.py  test_multi_gpu.py  (+1 more)
trained_models/: coloran_scaler.pkl
workflows/: ci.yml  dependabot.yml  docs.yml  quality.yml  release.yml
(+20 files in other folders)
